basic ui layout

--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -1,10 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane id="AnchorMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="./Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" styleClass="background" stylesheets="@Main.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="377.0" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Test, please grab fxml" />
+      <Pane prefHeight="465.0" prefWidth="900.0" styleClass="alg-vis-background" stylesheets="@Main.css">
+         <children>
+            <Text layoutX="436.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+         </children>
+      </Pane>
+      <Text layoutX="23.0" layoutY="563.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Processors:">
+         <font>
+            <Font name="DejaVu Sans Mono Bold" size="13.0" />
+         </font>
+      </Text>
+      <Text layoutX="23.0" layoutY="541.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Output Filename:">
+         <font>
+            <Font name="DejaVu Sans Mono Bold" size="13.0" />
+         </font>
+      </Text>
+      <Text fx:id="inputLab" layoutX="23.0" layoutY="520.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input Filename:">
+         <font>
+            <Font name="DejaVu Sans Mono Bold" size="13.0" />
+         </font>
+      </Text>
+      <Text fx:id="percentUse" layoutX="789.0" layoutY="531.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="59.8583984375" />
+      <Text fx:id="memUse" layoutX="789.0" layoutY="494.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="59.8583984375" />
+      <Text fx:id="memJVM" layoutX="789.0" layoutY="457.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="59.8583984375" />
+      <Pane layoutX="658.0" layoutY="436.0" prefHeight="150.0" prefWidth="229.0" style="-fx-background-color: #fafafa;">
+         <children>
+            <TextFlow layoutX="8.0" layoutY="112.0" prefHeight="31.0" prefWidth="212.0" style="-fx-background-color: yellow;" />
+            <Text layoutX="36.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Operating on x cores">
+               <font>
+                  <Font name="DejaVu Sans Mono Bold" size="13.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+      <Pane layoutX="417.0" layoutY="436.0" prefHeight="150.0" prefWidth="229.0" style="-fx-background-color: #fafafa;" />
    </children>
 </AnchorPane>
