--- a/src/main/resources/Main.css
+++ b/src/main/resources/Main.css
@@ -1,3 +1,15 @@
-#AnchorMain{
-    -fx-background-color: red;
+.circle-button{
+    -fx-background-radius: 5em;
+    -fx-min-width: 60px;
+    -fx-min-height: 60px;
+    -fx-max-width: 60px;
+    -fx-max-height: 60px;
+}
+
+.background{
+    -fx-background-color: blue;
+}
+
+.alg-vis-background{
+    -fx-background-color: yellow;
 }
