--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
@@ -25,27 +26,54 @@
                <children>
                   <Pane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Text layoutX="279.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Best" />
-                        <Text layoutX="75.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Schedules Created" />
-                        <Text layoutX="502.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Elapsed" />
+                        <Text layoutX="279.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Best">
+                           <font>
+                              <Font name="Roboto" size="20.0" />
+                           </font></Text>
+                        <Text layoutX="39.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Schedules Created">
+                           <font>
+                              <Font name="Roboto" size="20.0" />
+                           </font></Text>
+                        <Text layoutX="477.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Elapsed">
+                           <font>
+                              <Font name="Roboto" size="20.0" />
+                           </font></Text>
                         <TextFlow fx:id="inGraphFlow" layoutX="14.0" layoutY="93.0" prefHeight="17.0" prefWidth="588.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Input Graph: " />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Input Graph: ">
+                                 <font>
+                                    <Font name="Roboto" size="13.0" />
+                                 </font></Text>
                            </children>
                         </TextFlow>
                         <TextFlow fx:id="outGraphFlow" layoutX="14.0" layoutY="115.0" prefHeight="17.0" prefWidth="560.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Output Graph: " />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Output Graph: ">
+                                 <font>
+                                    <Font name="Roboto" size="13.0" />
+                                 </font></Text>
                            </children>
                         </TextFlow>
                         <TextFlow fx:id="numProFlow" layoutX="14.0" layoutY="136.0" prefHeight="17.0" prefWidth="523.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Processors: " />
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number of Processors: ">
+                                 <font>
+                                    <Font name="Roboto" size="13.0" />
+                                 </font></Text>
                            </children>
                         </TextFlow>
-                        <Text fx:id="schedCreatedText" layoutX="134.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-                        <Text fx:id="currentBestText" layoutX="307.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-                        <Text fx:id="timeElapsedText" layoutX="526.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
+                        <Text fx:id="schedCreatedText" layoutX="93.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="test" textAlignment="CENTER">
+                           <font>
+                              <Font name="Roboto" size="34.0" />
+                           </font></Text>
+                        <Text fx:id="currentBestText" layoutX="305.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="test" textAlignment="CENTER">
+                           <font>
+                              <Font name="Roboto" size="34.0" />
+                           </font></Text>
+                        <Text fx:id="timeElapsedText" layoutX="436.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="202.0">
+                           <font>
+                              <Font size="34.0" />
+                           </font></Text>
                      </children>
                   </Pane>
                </children></VBox>
