--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -62,7 +62,7 @@
                                  </font></Text>
                            </children>
                         </TextFlow>
-                        <Text fx:id="schedCreatedText" layoutX="93.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="test" textAlignment="CENTER">
+                        <Text fx:id="schedCreatedText" layoutX="36.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="185.0">
                            <font>
                               <Font name="Roboto" size="34.0" />
                            </font></Text>
