--- a/src/main/resources/GanttChart.css
+++ b/src/main/resources/GanttChart.css
@@ -1,4 +1,4 @@
 .task-style {
-    -fx-background-color:GREEN;
-    -fx-border-color: BLACK;
+    -fx-background-color:#FFAD37;
+    -fx-border-color: #FE5915;
 }
